nav bar collapse fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,10 +8,9 @@ body {
 
 }
 
-nav {
-  background-color: rgba(45, 46, 46, 0.5);
+.navbar-brand{
+  color: #E30202;
 }
-
 .nav-link, .navbar-brand{
   font-family: 'Sounds Eroded';
   font-weight: bold;
